--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "requests (>=2.32.5,<3.0.0)"
+    "requests (>=2.32.5,<3.0.0)",
+    "pydantic (>=2.11.9,<3.0.0)",
+    "sqlalchemy (>=2.0.43,<3.0.0)"
 ]
 
 
